fixed the menu selector on mobile so it looks better

--- a/Static/scss/components/general/general.scss
+++ b/Static/scss/components/general/general.scss
@@ -12,8 +12,8 @@ h1{
     width: 150px;
     
     @include mobile{
-        width: 75%;
-        margin-left: 15%;
+        width: 125px;
+        margin-left: 25%;
     }
 }
 
@@ -47,6 +47,10 @@ h1{
 
 .select{
     margin-top: 20%;
+    
+    @include mobile{
+        margin-top: 10%;
+    }
 }
 
 a{
